--- a/decrypt-file.html
+++ b/decrypt-file.html
@@ -57,25 +57,36 @@
 
 				const algorithm = "AES-GCM";
 				// Size of key in bytes
+				// Use 32 byte (256 bit) key
 				const keySize = 32;
 				// Size of iv in bytes
+				// Use 12 byte (96 bit) iv
 				const ivLength = 12;
 				// Size of authentication tag in bytes
+				// Use 16 byte (128 bit) tag
 				const tagLength = 16;
 				// Size of salt in bytes
 				// Use 16 byte (128 bit) salt
 				const saltSize = 16;
+				// Number of PBKDF cycles
+				const numIterations = 1000;
 
 				// Lets create an empty iv that contains all 0s
 				const iv = new Uint8Array(ivLength);
 				iv.fill(0, 0, ivLength);
 
 				// Read the salt from the destination file
-				const salt = await readFilePromise(file, 0, saltSize);
-				const numIterations = 1000;
+				const salt = await readFilePromise(file, 0, saltSize, "binaryString");
+				console.log("Salt: " + forge.util.bytesToHex(salt))
+
+				// Generate the key from the salt and password
 				const key = forge.pkcs5.pbkdf2(password, salt, numIterations, keySize);
+				console.log("Key: " + forge.util.bytesToHex(key))
+
 				// Read the authentication tag
 				const tag = await readFilePromise(file, -tagLength, file.size)
+				console.log("Tag: " + forge.util.bytesToHex(tag))
+
 				const decipher = forge.cipher.createDecipher(algorithm, key);
 				decipher.start({
 					iv: iv, // should be a 12-byte binary-encoded string or byte buffer
@@ -110,12 +121,17 @@
 					}
 					console.log("from offset " + startOffset + " to " + endOffset + ", slice " + i + " out of: " + numberOfSlices);
 					progressBar.innerHTML = "" + ((i + 1) / numberOfSlices * 100) + "%";
-					const data = await readFilePromise(file, startOffset, endOffset);
-					decipher.update(forge.util.createBuffer(data));
+					const data = await readFilePromise(file, startOffset, endOffset)
+					encryptedBytes = forge.util.createBuffer(data)
+					//encryptedBytes = convertUint8ArrayToBinaryString(data)
+
+					console.log("Encrypted data: " + forge.util.bytesToHex(encryptedBytes))
+					decipher.update(encryptedBytes)
 					console.log("Decipher output size: " + decipher.output.length());
-					const decryptedBytes = str2uint8array(decipher.output.getBytes())
+					// Convert the decrypted bytes into a Uint8Array for the WriteStream to work
+					const decryptedBytes = convertBinaryStringToUint8Array(decipher.output.getBytes())
 					console.log("Decrypted bytes size: " + decryptedBytes.length)
-					console.log("Decrypted data: " + forge.util.bytesToHex(decryptedBytes))
+					//console.log("Decrypted data: " + forge.util.bytesToHex(decryptedBytes))
 					writer.write(decryptedBytes)
 					console.log("After write size: " + decipher.output.length());
 				}
@@ -124,7 +140,7 @@
 					console.log("!!! Error decrypting " + file.name)
 				}
 				// Write remaining data
-				const decryptedBytes = str2uint8array(decipher.output.getBytes())
+				const decryptedBytes = convertBinaryStringToUint8Array(decipher.output.getBytes())
 				writer.write(decryptedBytes)
 
 				let endTime = performance.now(); //end time
@@ -168,18 +184,20 @@
 			return writer
 		}
 
-		// perfomance: 77.245 ms for 2 mb, 102 ms for 4mb
-		// Converts string to an array buffer
-		function str2uint8array(str) {
-			var length  = str.length;
-			//var buff = new ArrayBuffer(strLen);
-			var buff = new Uint8Array(length);
-			for(var i = 0; i < length; i += 65535) {
-				var addition = (i + 65535 > length) ? length - i : 65535;
-				// slice and map are native functions 
-				buff.set(str.slice(i,i+addition).split('').map(function(el) {return el.charCodeAt();}));
+		function convertUint8ArrayToBinaryString(u8Array) {
+			var i, len = u8Array.length, b_str = "";
+			for (i=0; i<len; i++) {
+				b_str += String.fromCharCode(u8Array[i]);
 			}
-			return buff;
+			return b_str;
+		}
+
+		function convertBinaryStringToUint8Array(bStr) {
+			var i, len = bStr.length, u8_array = new Uint8Array(len);
+			for (var i = 0; i < len; i++) {
+				u8_array[i] = bStr.charCodeAt(i);
+			}
+			return u8_array;
 		}
 
 	</script>
