Increase password field length

--- a/encrypt-file.html
+++ b/encrypt-file.html
@@ -16,7 +16,7 @@
 		<br/>
 
 		Type Password:
-		<input type="text" id="password"/>
+		<input type="text" id="password" size="128"/>
 		<br/>
 		<button id="encryptBtn" onclick="encryptFileAsync(event)">Encrypt File</button>
 	</div>
