--- a/decrypt-file.html
+++ b/decrypt-file.html
@@ -16,7 +16,7 @@
 		<br/>
 
 		Type Password:
-		<input type="text" id="password"/>
+		<input type="text" id="password" size="128"/>
 		<br/>
 		<button id="decryptBtn" onclick="decryptFileAsync(event)">Decrypt File</button>
 	</div>
